--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=soufianos
-PASSWORD=just_a_test
+DATABASE=mongodb+srv://soufianos:<PASSWORD>@cluster0.miwvb.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_USERNAMEUSERNAME=soufianos
+DATABASE_PASSWORD=yfl3PwoXqeRwhyop
