--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "slugify": "^1.4.5"
   }
 }
