--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.0",
-    "slugify": "^1.4.5"
+    "slugify": "^1.4.5",
+    "validator": "^13.1.1"
   }
 }
