--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "pug": "^3.0.0",
     "slugify": "^1.4.5",
     "validator": "^13.1.1"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.5"
   }
 }
